--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "chaiaurbackend",
   "version": "1.0.0",
   "description": "a backend at chai aur code",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/inedx.js"
   },
   "keywords": [
     "backend",
     "javascript"
   ],
   "author": "karan singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
